Updated project structure

--- a/CTS_dataprep/implementation/src/ca/gc/cra/fxit/ctsagent/resources/strings_en.properties
+++ b/CTS_dataprep/implementation/src/ca/gc/cra/fxit/ctsagent/resources/strings_en.properties
@@ -1,29 +1,29 @@
 # Page Titles
-title=strutsbase
-entryForm.title=Manage employee details
-employeeDetails.title=View employee details
-viewEmployee.title=View employee details
-deleteEmployee.title=Delete employee
-modifyEmployee.title=Modify employee details
-addEmployee.title=Add employee
-listEmployee.title=List employees
+title=ctsagent
+entryForm.title=Manage package info details
+packageInfoDetails.title=View package info details
+viewPackageInfo.title=View package info details
+deletePackageInfo.title=Delete package info
+modifyPackageInfo.title=Modify packageInfo details
+addPackageInfo.title=Add packageInfo
+listPackageInfo.title=List packages
 
 # menu text
 menu.secondary=Secondary menu
-menu.heading=Manage employees
+menu.heading=Manage packages
 
 # Breadcrumbs
-breadcrumb=struts2base
+breadcrumb=ctsagent
 
 # Page/Section Headings
 heading.branchName=Information Technology Branch 
 heading.branchNameAbbr=ITB
-heading.entryForm=Manage employee details
-heading.employeeDetails=View employee details
-heading.employeeList=Employee list
-heading.modifyEmployee=Modify employee details
-heading.createEmployee=Add employee
-heading.deleteEmployee=Confirm delete
+heading.entryForm=Manage packageInfo details
+heading.packageInfoDetails=View package info details
+heading.packageInfoList=Package list
+heading.modifyPackageInfo=Modify package info details
+heading.createPackageInfo=Add package info
+heading.deletePackageInfo=Confirm delete
 
 heading.userInfo=User Info
 heading.userName=User Name
@@ -31,32 +31,32 @@ heading.userAttributes=User Attributes
 heading.userRoles=Roles
 
 # Instructions
-instruction.entryForm=Please enter the employee id to retrieve the employee details.
-instruction.deleteForm=Do you really want to delete this employee?
-instruction.modifyForm=Please change stuff.
-instruction.createForm=Enter some new stuff.
+instruction.entryForm=Please enter the message ref id to retrieve the package details.
+instruction.deleteForm=Do you really want to delete this package?
+instruction.modifyForm=Please change package.
+instruction.createForm=Enter new package.
 
 errors_found=Please correct the %{fieldErrors.size > 1 ? fieldErrors.size : ''} error%{fieldErrors.size > 1 ? 's' : ''} on this page.
 
-get_list=List employees
+get_list=List packages
 get_userinfo=User info
 
 # Labels
-retrieve_employee=Retrieve employee
+retrieve_employee=Retrieve package
 
-employee=Employee
+packageInfo=Package
  
 id=Id
-id_help_heading=Employee id help
-id_help_text=Employee id, numeric, up to four digits.
+id_help_heading=Package id help
+id_help_text=PackageInfo id, formatting details.
 
 required= <strong class="required">(required)</strong>
 name=Name
-dept=Work Dept
-job=Job
-years=Years of experience
-salary=Annual salary
-comm=Commission
+dept=Direction
+job=Type
+years=Tax Year
+salary=Amount
+comm=Comm
 
 # Buttons
 get_submit=Retrieve
@@ -66,14 +66,14 @@ create_submit=Add
 
 delete=Delete
 modify=Modify
-create=Add employee
+create=Add package
 cancel=Cancel
 
 next=Next
 prev=Previous
 
-page_of_employee_list=page of employee list
-page_n_of_employee_list=: Page {0} of employee list
+page_of_packageInfo_list=page of package list
+page_n_of_packageInfo_list=: Page {0} of package list
 
 emptyOption=Select
 
@@ -83,17 +83,17 @@ Sales=Sales
 
 # Error Messages
 error=Error:
-noId=Error: No Employee Id provided.
+noId=Error: No packageInfo Id provided.
 
 # Override the default XWorkConverter error message with one that's
 # tailored for the id field.
-invalid.fieldvalue.id=Error: Employee Id must be numeric.
+invalid.fieldvalue.id=Error: PackageInfo Id must be ....
 
 # Override the default XWorkConverter error message for all other fields
 xwork.default.invalid.fieldvalue=Error: Invalid field value for field {0} 
 
 
-notFound=Error:  Employee Id not found.
+notFound=Error:  PackageInfo Id not found.
 
 invalid_error=Error: {0} is invalid.
 required_error=Error: {0} is required.
@@ -108,13 +108,13 @@ cics.0022=Error: Invalid Request
 cics.0024=Error: SQL Error.  Not found, or dupkey on id field, or RI error on dept
 cics.0025=Insert Successful
 cics.0026=Delete Successful
-cics.0028=Error: Employee number must be numeric
+cics.0028=Error: PackageInfo number must be ...
 cics.0029=Error: Invalid Name
 cics.0030=Error: Invalid Department
-cics.0031=Error: Job must be one of Mgr, Sales, or Clerk
-cics.0032=Error: Years cannot be greater than 36
-cics.0033=Error: Salary must be between 0 and 50000
-cics.0034=Error: Commission must be between 0 and 5000
+cics.0031=Error: Type must be one of ....
+cics.0032=Error: Years cannot be ....
+cics.0033=Error: Amount ...
+cics.0034=Error: Comm must be .....
 
 currency_prepend=$
 currency_append=
