--- a/CTS_dataprep/implementation/src/ca/gc/cra/fxit/ctsagent/resources/strings_fr.properties
+++ b/CTS_dataprep/implementation/src/ca/gc/cra/fxit/ctsagent/resources/strings_fr.properties
@@ -1,29 +1,29 @@
 # Page Titles
-title=struts2base
-entryForm.title=fEmployees
-employeeDetails.title=fEmployee Details
-viewEmployee.title=fEmployee Details
-deleteEmployee.title=fDelete Employee
-modifyEmployee.title=fModify Employee
-addEmployee.title=fAdd Employee
-listEmployee.title=fList Employees
+title=ctsagent
+entryForm.title=fPackageInfos
+packageInfoDetails.title=fPackageInfo Details
+viewPackageInfo.title=fPackageInfo Details
+deletePackageInfo.title=fDelete PackageInfo
+modifyPackageInfo.title=fModify PackageInfo
+addPackageInfo.title=fAdd PackageInfo
+listPackageInfo.title=fList PackageInfo
 
 # menu text
 menu.secondary=Menu secondaire
 menu.heading=Rubrique mineur
 
 # Breadcrumbs
-breadcrumb=struts2base
+breadcrumb=ctsagent
 
 # Page/Section Headings
 heading.branchName=Direction générale de l''informatique 
 heading.branchNameAbbr=DGI
-heading.entryForm=Employé
-heading.employeeDetails=Détails des employés
-heading.employeeList=fEmployee List
-heading.modifyEmployee=fModify Employee
-heading.createEmployee=fAdd Employee
-heading.deleteEmployee=fConfirm Delete
+heading.entryForm=fPackageInfo
+heading.PackageInfoDetails=Détails des PackageInfos
+heading.PackageInfoList=fPackageInfo List
+heading.modifyPackageInfo=fModify PackageInfo
+heading.createPackageInfo=fAdd PackageInfo
+heading.deletePackageInfo=fConfirm Delete
 heading.userInfo=fUser Info
 heading.userName=fUser Name
 heading.userAttributes=fUser Attributes
@@ -31,49 +31,49 @@ heading.userRoles=fRoles
 
 
 # Instructions
-instruction.entryForm=S''il vous plaît entrez le Id de l''employé pour récupérer les informations des employés.
-instruction.deleteForm=fDo you really want to delete this employee?
-instruction.modifyForm=fPlease change stuff.
-instruction.createForm=fEnter some new stuff.
+instruction.entryForm=S''il vous plaît entrez le Id de l''employé pour récupérer les informations des PackageInfos.
+instruction.deleteForm=fDo you really want to delete this PackageInfo?
+instruction.modifyForm=fPlease change PackageInfo.
+instruction.createForm=fEnter new PackageInfo.
 
 errors_found=Veuillez corriger le ou les erreur(s) sur cette page.
 
-get_list=fRetrieve employee list
+get_list=fRetrieve PackageInfo list
 get_userinfo=fUser Info
 
 # Labels
-retrieve_employee=fRetrieve employee by id
-employee=Employé
+retrieve_packageInfo=fRetrieve PackageInfo by id
+packageInfo=PackageInfo
 
-id_help_heading=fEmployee id help
-id_help_text=fEmployee id, numeric, up to four digits.
+id_help_heading=fPackageInfo id help
+id_help_text=fPackageInfo id, .....
 
 
-id=Numero d''Employé
+id=Numero d''PackageInfo
 required= <strong class="required">(obligatoire)</strong>
 name=Nom
-dept=Departement de Travail
-job=Position
-years=Date d''embauche
-salary=Salaire
-comm=Commision
+dept=Direction
+job=Type
+years=Tax Year
+salary=Amount
+comm=Comm
 
 # Buttons
-get_submit=fGet Employee
-delete_submit=fDelete Employee
-modify_submit=fModify Employee
-create_submit=fAdd Employee
+get_submit=fGet PackageInfo
+delete_submit=fDelete PackageInfo
+modify_submit=fModify PackageInfo
+create_submit=fAdd PackageInfo
 
-delete=fDelete Employee		
-modify=fModify Employee
-create=fCreate Employee 
+delete=fDelete PackageInfo		
+modify=fModify PackageInfo
+create=fCreate PackageInfo
 cancel=fCancel
 
 next=fNext
 prev=fPrevious
 
-page_of_employee_list=fpage of employee list
-page_n_of_employee_list=: fPage {0} of employee list
+page_of_packageInfo_list=fpage of PackageInfo list
+page_n_of_packageInfo_list=: fPage {0} of PackageInfo list
 
 
 emptyOption=--- fPlease Select ---
@@ -88,12 +88,12 @@ noId=Erreur:  Aucun employé id fourni.
 
 # Override the default XWorkConverter error message with one that's
 # tailored for the id field.
-invalid.fieldvalue.id=Erreur: Le Numéro d''employer doit être numérique.
+invalid.fieldvalue.id=Erreur: Le Numéro d''PackageInfo doit être numérique.
 
 # Override the default XWorkConverter error message for all other fields
 xwork.default.invalid.fieldvalue=fError: Invalid field value for field {0} 
 
-notFound=L''employer n''a pas été trouver.
+notFound=L''PackageInfo n''a pas été trouver.
 
 invalid_error=f Error: {0} is invalid.
 required_error=f''Error: {0} is required.
@@ -107,13 +107,13 @@ cics.0022=fError: Invalid Request
 cics.0024=fError: SQL Error.  Not found, or dupkey on id field, or RI error on dept
 cics.0025=fInsert Successful
 cics.0026=fDelete Successful
-cics.0028=Erreur: Le Numéro d''employer doit être numérique
+cics.0028=Erreur: Le Numéro d''PackageInfo ....
 cics.0029=fError: Invalid Name
-cics.0030=fError: Invalid Department
-cics.0031=fError: Job must be one of Mgr, Sales, or Clerk
-cics.0032=fError: Years cannot be greater than 36
-cics.0033=fError: Salary must be between 0 and 50000
-cics.0034=fError: Commission must be between 0 and 5000
+cics.0030=fError: Invalid Direction
+cics.0031=fError: Type must be one of ....
+cics.0032=fError: Tax Year must be
+cics.0033=fError: Amount must be ....
+cics.0034=fError: Comm ....
 
 currency_prepend=
 currency_append=&nbsp;$
